--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,6 +11,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  deployments: write
 
 jobs:
   build:
@@ -33,8 +34,8 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Copy CNAME file
-        run: cp CNAME _site/
+      - name: Create CNAME file
+        run: echo "aisafety.no" > _site/CNAME
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
